--- a/atkm/src/app/shared/components/atk-datatable/atk-datatable.component.css
+++ b/atkm/src/app/shared/components/atk-datatable/atk-datatable.component.css
@@ -93,12 +93,12 @@
 
 .datatable-row:hover {
   background: var(--color-canvas-subtle);
-  border-color: var(--color-accent-fg);
+  /* border-color: var(--color-accent-fg); */
 }
 
 .datatable-row.selected {
   background: var(--color-canvas-subtle);
-  border-left: 3px solid var(--color-accent-fg);
+  border-left: 1px solid var(--color-accent-fg);
   transition: all 0.2s ease;
 }
 
