--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,14 +1,19 @@
-<div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed()">
+<div class="content-wrapper">
+  <!-- [class.config-collapsed]="configPanelCollapsed()" -->
   <header class="content-header">
     <h1>home-content {{ configPanelCollapsed() }} / {{ sidebar().userContext.username }}</h1>
 
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
-      <h1>atomeek.home.content Component</h1>
+      @if (bashConfig(); as config) {
+      <h1>{{ config.title }}</h1>
+      <!-- <h1>atomeek.home.content Component</h1> -->
       <div class="terminal-details">
-        <h2>{{ sidebar().userContext.title }}</h2>
+        <h2>{{ config.subtitle }}</h2>
+        <!-- <h2>{{ sidebar().userContext.title }}</h2> -->
       </div>
+      }
     </header>
     <!-- État de chargement -->
     @if (loading() ) {
