--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -38,26 +38,17 @@
       <div class="terminal-section">
         <div class="infos-items">
           <div class="infos-item" [class.enabled]="currentAccount.canTrade">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
+            <atk-icon name="check" color="#ef4444" [size]="24" />
             <span>Trading</span>
             <span class="status">{{ currentAccount.canTrade ? 'Activé' : 'Désactivé' }}</span>
           </div>
           <div class="infos-item" [class.enabled]="currentAccount.canWithdraw">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
+            <atk-icon name="check" color="#ef4444" [size]="24" />
             <span>Retrait</span>
             <span class="status">{{ currentAccount.canWithdraw ? 'Activé' : 'Désactivé' }}</span>
           </div>
           <div class="infos-item" [class.enabled]="currentAccount.canDeposit">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
+            <atk-icon name="check" color="#ef4444" [size]="24" />
             <span>Dépôt</span>
             <span class="status">{{ currentAccount.canDeposit ? 'Activé' : 'Désactivé' }}</span>
           </div>
