--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,8 +1,12 @@
 <div class="content-wrapper">
   <!-- [class.config-collapsed]="configPanelCollapsed()" -->
+
+  <!-- ======================= -->
+  <!-- HEADER  -->
+  <!-- ======================= -->
+
   <header class="content-header">
     <h1>home-content {{ configPanelCollapsed() }} / {{ sidebar().userContext.username }}</h1>
-
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
@@ -15,14 +19,22 @@
       </div>
       }
     </header>
-    <!-- État de chargement -->
+
+    <!-- ======================= -->
+    <!-- LOADING STATE -->
+    <!-- ======================= -->
+
     @if (loading() ) {
     <div class="loading-state">
       <div class="spinner"></div>
       <p>Chargement des informations du compte...</p>
     </div>
     }
-    <!-- État d'erreur -->
+
+    <!-- ======================= -->
+    <!-- ERROR STATE -->
+    <!-- ======================= -->
+
     @if (error()) {
     <div class="error-state">
       <atk-icon name="error-2" color="currentColor" />
@@ -30,6 +42,10 @@
       <button class="retry-btn" (click)="refreshAccount()">Réessayer</button>
     </div>
     }
+
+    <!-- ======================= -->
+    <!-- BASH SECTION -->
+    <!-- ======================= -->
 
     <div class="terminal-main">
 
@@ -43,28 +59,23 @@
         </div>
       </div>
 
+      <!-- ======================= -->
+      <!-- INFOS SECTION -->
+      <!-- ======================= -->
+
       <div class="terminal-section">
         <div class="infos-items">
           <div class="infos-item">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
-            <span>Trading</span>
+            <!-- <atk-icon name="check" color="#ef4444" [size]="24" />
+            <span>Trading</span> -->
           </div>
           <div class="infos-item">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
-            <span>Retrait</span>
+            <!-- <atk-icon name="check" color="#ef4444" [size]="24" />
+            <span>Retrait</span> -->
           </div>
           <div class="infos-item">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-              <path
-                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z" />
-            </svg>
-            <span>Dépôt</span>
+            <!-- <atk-icon name="check" color="#ef4444" [size]="24" />
+            <span>Dépôt</span> -->
           </div>
         </div>
         <div class="terminal-cmd">
@@ -79,12 +90,59 @@
       </div>
     </div>
 
-    <!-- Soldes des actifs -->
+    <!-- ======================= -->
+    <!-- TABLE SECTION -->
+    <!-- ======================= -->
+    @if (data().length > 0 && visibleColumns().length > 0) {
+    <section class="bash-data-section">
+      <div class="bash-data-content">
+        <span class="bash-data-label">current endpoint</span>
+        <header class="bash-data-header">
+          <h1>{{ getCurrentEndpointName(sidebarState.currentEndpoint) || 'Data Results' }}</h1>
+          <div class="bash-data-meta">
+            <span>records: {{ data().length }} items</span>
+            @if (terminalState().responseMetadata?.responseTime) {
+            <span>-</span>
+            <span>responseTime: {{ terminalState().responseMetadata.responseTime }}ms</span>
+            }
+          </div>
+        </header>
+
+        <!-- Datatable Component -->
+        <atk-datatable [columns]="visibleColumns()" [data]="data()" [loading]="bashService.loading()" [error]="error()"
+          (selectedRow)="onRowSelected($event)" />
+      </div>
+    </section>
+    }
+
+    <div class="infos-items">
+      <div class="infos-item">
+        <atk-icon name="check" color="var(--color-btn-bg-emphasis)" [size]="24" />
+        <span>{{ data().length }} items</span>
+        <!-- <span>Trading</span> -->
+      </div>
+      @if (terminalState().responseMetadata?.responseTime) {
+      <div class="infos-item">
+        <atk-icon name="check" color="var(--color-btn-bg-emphasis)" [size]="24" />
+        <span>{{ terminalState().responseMetadata.responseTime }}ms</span>
+        <!-- <span>Retrait</span> -->
+      </div>
+      }
+      <div class="infos-item">
+        <!-- <atk-icon name="check" color="#ef4444" [size]="24" />
+        <span>Dépôt</span> -->
+      </div>
+    </div>
+
+    <!-- ======================= -->
+    <!-- CONTENT SECTION -->
+    <!-- ======================= -->
+
     <div class="terminal-section">
       <div class="section-content">
         <atk-icon class="datatable-toggle" name="triangle-down" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
-          <h3>Soldes des actifs</h3>
+          <h3>Content Section</h3>
         </div>
         <!-- <div class="no-balances"> -->
         <!-- <p>Aucun actif avec solde disponible</p> -->
